@@ -1,3 +1,4 @@
+# flake8: noqa
 # -*- coding: utf-8 -*-
 from south.utils import datetime_utils as datetime
 from south.db import db
