@@ -1,5 +1,6 @@
 factory_boy
 django_libs
+-e git+git://github.com/pinax/django-mailer.git@919805e25fc18b06487b25414d4e5d5e05a92108#egg=mailer
 django-nose
 coverage
 django-coverage
