@@ -1,5 +1,8 @@
 === ongoing ===
 
+- brought coverage back to 100%
+- improved slug generator
+
 === 1.3.1 ===
 
 - Refreshed templates and js files
